<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RegistroProdcuctos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="grabar">Guardar</string>
    <string name="title_activity_formulario">Formulario</string>
    <string name="nuevoProducto">Nuevo Producto</string>
    <string name="mapa">Mapa</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="recibir_nuevos_productos">Recibir Nuevos Productos</string>
    <string name="preferencias">Preferencias</string>
    <string name="opciones">Opciones</string>

</resources>
