<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/nuevoProducto"
        android:icon="@drawable/ic_nuevo"
        android:title="@string/nuevoProducto"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_opciones"
        android:title="@string/opciones"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/mapa"
                android:icon="@drawable/ic_mapa"
                android:title="@string/mapa"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/enviar_productos"
                android:icon="@drawable/ic_enviar"
                android:title="@string/sincronizar"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/recibir_nuevos_productos"
                android:icon="@drawable/ic_recibir"
                android:title="@string/recibir_nuevos_productos"/>
            <item
                android:id="@+id/preferencias"
                android:icon="@drawable/ic_preferencias"
                android:title="@string/preferencias"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>

</menu>